@@ -30,6 +30,7 @@ Change Log:
 - Fixed: Editing Subscription details for administrators.
 - Fixed: Stripe API lib upgraded
 - Fixed: Login and reset password form header texts on switching
+- Fixed: bbPress dripped membership protection rules
 - Other minor enhancements/fixes
 
 1.0.3.5
